--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@tailwindcss/forms": "^0.5.7",
+    "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "handlebars": "^4.7.8",
     "lucide-react": "^0.364.0",
@@ -17,6 +19,7 @@
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "tailwind-merge": "^2.2.2",
     "zod": "^3.23.4"
   },
