--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.0",
     "handlebars": "^4.7.8",
     "lucide-react": "^0.364.0",
+    "mongoose": "^8.3.3",
     "next": "14.1.4",
     "nodemailer": "^6.9.13",
     "react": "^18",
