--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@hookform/resolvers": "^3.3.4",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "handlebars": "^4.7.8",
     "lucide-react": "^0.364.0",
     "mongoose": "^8.3.3",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
