--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
