--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@nextui-org/react": "^2.3.6",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.1.7",
     "handlebars": "^4.7.8",
     "lucide-react": "^0.364.0",
     "mongoose": "^8.3.3",
