--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
-    "@nextui-org/react": "^2.3.6",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "handlebars": "^4.7.8",
     "lucide-react": "^0.364.0",
@@ -25,7 +25,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
-    "tailwind-merge": "^2.2.2",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.4"
   },
   "devDependencies": {
