--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "mongoose": "^8.3.3",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-paginate": "^8.2.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.10.3",
