--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dompurify": "^3.1.3",
     "framer-motion": "^11.1.7",
     "handlebars": "^4.7.8",
+    "jsdom": "^24.0.0",
     "lucide-react": "^0.364.0",
     "mongoose": "^8.3.3",
     "next": "14.1.4",
@@ -45,6 +46,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@types/bcrypt": "^5.0.2",
     "@types/dompurify": "^3.0.5",
+    "@types/jsdom": "^21.1.6",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
