--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tailwindcss/forms": "^0.5.7",
-    "@uploadthing/react": "^6.5.4",
+    "@uploadthing/react": "^6.6.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.51.3",
     "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
+    "sharp": "^0.33.4",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
