--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-quill": "^2.0.0",
     "sharp": "^0.33.4",
     "sonner": "^1.4.41",
+    "swiper": "^11.1.8",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.12.0",
